feat: Implement full mirror URL handling and enhance thumbnail URL collection logic

--- a/src/app/pages/media/media-details/media-details.component.html
+++ b/src/app/pages/media/media-details/media-details.component.html
@@ -116,7 +116,7 @@
             <div class="mirror-servers-list">
               @for (mirror of mediaItem()!.mirrors; track $index) {
               <div class="mirror-server">
-                <span>{{ mirror }}</span>
+                <span>{{ getFullMirrorUrl(mirror, mediaItem()!.url) }}</span>
               </div>
               }
             </div>
