feat: Remove fixed dimensions for image dialog and enhance responsive behavior

--- a/src/app/components/image-dialog/image-dialog.component.scss
+++ b/src/app/components/image-dialog/image-dialog.component.scss
@@ -31,7 +31,10 @@
   overflow: hidden;
   position: relative;
   background-color: var(--mat-sys-color-surface-container-lowest);
-  user-select: none; /* Prevent text selection during drag */
+  -webkit-user-select: none;
+  /* Prevent text selection during drag */
+  user-select: none;
+  /* Prevent text selection during drag */
 
   img {
     max-width: 100%;
