--- a/src/app/components/comments-list/comments-list.component.html
+++ b/src/app/components/comments-list/comments-list.component.html
@@ -44,7 +44,7 @@
 
     @if (!hasMore() && commentCount() > 0) {
     <div class="no-more-comments">
-      <p>No more comments to load</p>
+      <p>No more comments to show</p>
     </div>
     }
     }
